--- a/bulkBrain_analysis.qmd
+++ b/bulkBrain_analysis.qmd
@@ -39,6 +39,8 @@ library(ComplexHeatmap)
 library(CEMiTool)
 library(sva)
 library(gridExtra)
+library(cowplot)
+
 
 ```
 
@@ -123,23 +125,17 @@ if (!file.exists("images")){
 
 counts <- read.delim("https://raw.githubusercontent.com/pedrohpro/RNAseq_Autism/main/bulkBrain_counts.txt", row.names = 1)
 
-meta_donor <- read.csv("https://raw.githubusercontent.com/pedrohpro/RNAseq_Autism/main/bulkBrain_donorMetadata.csv", sep = ";", row.names = 1)
+metadonor <- read.csv("https://raw.githubusercontent.com/pedrohpro/RNAseq_Autism/main/bulkBrain_donorMetadata.csv", sep = ";", row.names = 1)
 
-genes_asd <- read.csv("https://raw.githubusercontent.com/pedrohpro/RNAseq_Autism/main/genesofinterest.csv", sep = ";")
+geneslist <- list()
+geneslist$asd <- read.csv("https://raw.githubusercontent.com/pedrohpro/RNAseq_Autism/main/genesofinterest.csv", sep = ";")
 
-genes_down <- read.csv("https://raw.githubusercontent.com/pedrohpro/RNAseq_Autism/main/genes_down.csv", sep = ";")
+geneslist$down <- read.csv("https://raw.githubusercontent.com/pedrohpro/RNAseq_Autism/main/genes_down.csv", sep = ";")
 
-patients_mutations <- read.csv("https://raw.githubusercontent.com/pedrohpro/RNAseq_Autism/main/pacientsmutations.csv", sep = ";", row.names = 1)
+geneslist$patients <- read.csv("https://raw.githubusercontent.com/pedrohpro/RNAseq_Autism/main/pacientsmutations.csv", sep = ";", row.names = 1)
 
-# Maybe I should remove this part below
-# Down genes
-down_complement <- paste(genes_down$ensembl_id, collapse = "|")
-
-# Checking genes
-enriched_genes <- genes_asd$genesofinterest
-any(duplicated(enriched_genes))
-genes_asd$pathway <- factor(genes_asd$pathway)
-summary(genes_asd$pathway)
+geneslist$bruno <- read.csv("https://raw.githubusercontent.com/pedrohpro/RNAseq_Autism/main/bruno_genes.csv", sep = ";")
+  
 ```
 
 ### Removing samples {style="background-color: #0049b7; color: #FFF685;  padding-top: 15px;   padding-right: 15px;   padding-bottom: 15px;   padding-left: 15px"}
@@ -180,31 +176,31 @@ rownames(counts) <- gsub("\\|", "-", rownames(counts))
 
 ```{r}
 # Changing all columns to character (Necessary step to create metadata dataframe)
-meta_donor <- mutate_all(meta_donor, as.character)
+metadonor <- mutate_all(metadonor, as.character)
 
 # Changing some names in the donor's metadata data frame for better visualizing
 # 4M will become 0.3Y
-meta_donor$Age <- gsub("4M", "0.3Y", meta_donor$Age)
+metadonor$Age <- gsub("4M", "0.3Y", metadonor$Age)
 # 6M will become 0.5Y
-meta_donor$Age <- gsub("6M", "0.5Y", meta_donor$Age)
+metadonor$Age <- gsub("6M", "0.5Y", metadonor$Age)
 # 301days will become 0.8Y
-meta_donor$Age <- gsub("301days", "0.8Y", meta_donor$Age)
+metadonor$Age <- gsub("301days", "0.8Y", metadonor$Age)
 # 12M will become 1Y
-meta_donor$Age <- gsub("12M", "1Y", meta_donor$Age)
+metadonor$Age <- gsub("12M", "1Y", metadonor$Age)
 # 2Y178d will become 2.5Y
-meta_donor$Age <- gsub("2Y178d", "2.5Y", meta_donor$Age)
+metadonor$Age <- gsub("2Y178d", "2.5Y", metadonor$Age)
 # 2Y305d will become 2.8Y
-meta_donor$Age <- gsub("2Y305d", "2.8Y", meta_donor$Age)
+metadonor$Age <- gsub("2Y305d", "2.8Y", metadonor$Age)
 # 8Y90d will become 8.3Y
-meta_donor$Age <- gsub("8Y90d", "8.3Y", meta_donor$Age)
+metadonor$Age <- gsub("8Y90d", "8.3Y", metadonor$Age)
 # 10Y265d will become 10.7Y
-meta_donor$Age <- gsub("10Y265d", "10.7Y", meta_donor$Age)
+metadonor$Age <- gsub("10Y265d", "10.7Y", metadonor$Age)
 
 # Creating a donor column
-meta_donor$Donor <- rownames(meta_donor)
+metadonor$Donor <- rownames(metadonor)
 
 # Chagning Sequencing.Site column name
-names(meta_donor)[names(meta_donor) == "Sequencing.Site"] <- "SequencingSite"
+names(metadonor)[names(metadonor) == "Sequencing.Site"] <- "SequencingSite"
 ```
 
 ### Creating sample metadata data frame {style="background-color: #0049b7; color: #FFF685;  padding-top: 15px;   padding-right: 15px;   padding-bottom: 15px;   padding-left: 15px"}
@@ -212,14 +208,14 @@ names(meta_donor)[names(meta_donor) == "Sequencing.Site"] <- "SequencingSite"
 ```{r}
 
 # Creating the empty metadata dataframe for all counts
-meta <- data.frame(matrix("vazio", nrow = length(colnames(counts)), ncol = length(colnames(meta_donor))), stringsAsFactors=FALSE)
+meta <- data.frame(matrix("vazio", nrow = length(colnames(counts)), ncol = length(colnames(metadonor))), stringsAsFactors=FALSE)
 
-colnames(meta) <- colnames(meta_donor) # colocar nome nas colunas
+colnames(meta) <- colnames(metadonor) # colocar nome nas colunas
 rownames(meta) <- colnames(counts) # IMPORTANTÍSSIMO para o deseq2
 
 # Filling up the metadata dataframe for all samples (quite a beautiful loop I must say)
 for (i in 1:length(rownames(meta))){
-  meta[i,] <- meta_donor[grepl(gsub("\\..*", "", colnames(counts)[i]), rownames(meta_donor)), ]
+  meta[i,] <- metadonor[grepl(gsub("\\..*", "", colnames(counts)[i]), rownames(metadonor)), ]
 }
 
 # Creating a new column for regions acronyms
@@ -228,6 +224,11 @@ meta$Region <- gsub("^.*\\.", "", rownames(meta))
 # re-leveling all the factors so that when plotting the data, such as in a PCA, it looks better and correctly ordered
 meta$Age <- factor(meta$Age, levels = c("8PCW","9PCW","12PCW","13PCW","16PCW","17PCW","19PCW","21PCW","22PCW","35PCW","37PCW","0.3Y","0.5Y","0.8Y","1Y","2Y","2.5Y","2.8Y","4Y","8Y","8.3Y","10.7Y","13Y","15Y","18Y","19Y","21Y","23Y","30Y","36Y","37Y","40Y"))
 
+
+# Não deu certo assim for now (does it really go faster? Parece mais lento)
+#map(colnames(counts), function(i){
+#  bind_rows(meta, metadonor[rownames(metadonor) == gsub("\\..*", "", i),])
+#})
 ```
 
 ### Grouping periods {style="background-color: #0049b7; color: #FFF685;  padding-top: 15px;   padding-right: 15px;   padding-bottom: 15px;   padding-left: 15px"}
@@ -311,32 +312,32 @@ Note: Because GroupedAge has been leveled when factored, both lists: time_counts
 
 ```{r}
 
-#time_subs <- list()
+# Incluir o nome
+#timesubs <- map(levels(meta$GroupedAge), ~meta %>% filter(GroupedAge == .x))
 
-#for (i in levels(meta$GroupedAge)){
-#  filter <- grepl(i, meta$GroupedAge)
-#  time_subs[[i]]$cts_raw <- list(counts[,filter])
-#  time_subs[[i]]$meta <- list(meta[filter,])
-#}
+timesubs <- list()
 
-# Re-leveling all columns of all subsets: there isnt always samples for each level
-# (NOTE: re-factors in alphabetical order! But age levels order was preserved)
-#time_subs <- map()
-
-##############################################################
-
-time_metasubs <- list()
-time_countsubs <- list()
-
+# Adiing levels groups
 for (i in levels(meta$GroupedAge)){
   filter <- grepl(i, meta$GroupedAge)
-  time_metasubs <- append(time_metasubs, list(meta[filter,]))
-  time_countsubs <- append(time_countsubs, list(counts[,filter]))
+  timesubs[[i]]$cts_raw <- counts[,filter]
+  timesubs[[i]]$meta <- meta[filter,]
 }
 
-# Re-leveling all columns of all subsets: there isnt always samples for each level
-# (NOTE: re-factors in alphabetical order! But age levels order was preserved)
-time_metasubs <- map(time_metasubs, ~ mutate_all(.x, factor))
+# Adding extra groups
+filter <- grepl("PCW", meta$GroupedAge)
+timesubs$prenatal$cts_raw <- counts[,filter]
+timesubs$prenatal$meta <- meta[filter,]
+
+filter <- grepl("YEARS", meta$GroupedAge)
+timesubs$born$cts_raw <- counts[,filter]
+timesubs$born$meta <- meta[filter,]
+
+timesubs$all_ages$cts_raw <- counts
+timesubs$all_ages$meta <- meta
+
+# Re-leveling all factors so that no factor level has 0 samples (all col 4 all df)
+timesubs <- map(timesubs, ~list(cts_raw = .x$cts_raw, meta = mutate_all(.x$meta, factor)))
 
 ```
 
@@ -346,17 +347,30 @@ time_metasubs <- map(time_metasubs, ~ mutate_all(.x, factor))
 
 ```{r}
 
-space_metasubs <- list()
-space_countsubs <- list()
+spacesubs <- list()
 
+# Adding levels regions
 for (i in discard(levels(meta$GroupedRegion), ~ .x == "Ganglionic_eminence")){
   filter <- grepl(i, meta$GroupedRegion)
-  space_metasubs <- append(space_metasubs, list(meta[filter,]))
-  space_countsubs <- append(space_countsubs, list(counts[,filter]))
+  spacesubs[[i]]$cts_raw <- counts[,filter]
+  spacesubs[[i]]$meta <- meta[filter,]
 }
 
+# Adding extra regions
+filter <- grepl("lobe", meta$GroupedRegion)
+spacesubs$cortex$cts_raw <- counts[,filter]
+spacesubs$cortex$meta <- meta[filter,]
+
+filter <- !grepl("lobe", meta$GroupedRegion) # note the not "!"
+spacesubs$non_cortical$cts_raw <- counts[,filter]
+spacesubs$non_cortical$meta <- meta[filter,]
+
+spacesubs$all_regions$cts_raw <- counts
+spacesubs$all_regions$meta <- meta
+
+
 # Re-leveling all factors so that no factor level has 0 samples (all col 4 all df)
-space_metasubs <- map(space_metasubs, ~ mutate_all(.x, factor))
+spacesubs <- map(spacesubs, ~list(cts_raw = .x$cts_raw, meta = mutate_all(.x$meta, factor)))
 
 ```
 
@@ -366,13 +380,13 @@ Correct as in: meta and counts have the same samples and in the same order.
 
 ```{r}
 
-print(paste0("Time meta and counts subsets have the same (rownames and colnames) names? ", all(map2_lgl(time_countsubs, time_metasubs, ~ all(colnames(.x) %in% rownames(.y))))))
+print(paste0("Time meta and counts subsets have the same (rownames and colnames) names? ", all(map_lgl(timesubs, ~ all(colnames(.x$cts_raw) %in% rownames(.x$meta))))))
 
-print(paste0("Time meta and counts subsets have the same (rownames and colnames) order? ", all(map2_lgl(time_countsubs, time_metasubs, ~ all(colnames(.x) == rownames(.y))))))
+print(paste0("Time meta and counts subsets have the same (rownames and colnames) order? ", all(map_lgl(timesubs, ~ all(colnames(.x$cts_raw) == rownames(.x$meta))))))
 
-print(paste0("Space meta and counts subsets have the same (rownames and colnames) names? ", all(map2_lgl(space_countsubs, space_metasubs, ~ all(colnames(.x) %in% rownames(.y))))))
+print(paste0("space meta and counts subsets have the same (rownames and colnames) names? ", all(map_lgl(spacesubs, ~ all(colnames(.x$cts_raw) %in% rownames(.x$meta))))))
 
-print(paste0("Space meta and counts subsets have the same (rownames and colnames) order? ", all(map2_lgl(space_countsubs, space_metasubs, ~ all(colnames(.x) == rownames(.y))))))
+print(paste0("space meta and counts subsets have the same (rownames and colnames) order? ", all(map_lgl(spacesubs, ~ all(colnames(.x$cts_raw) == rownames(.x$meta))))))
 
 ```
 
@@ -426,7 +440,7 @@ sampDistri_func <- function(myMeta, xaxis, yaxis, myFileName){
 
 ```
 
-##### Plotting {style="background-color: #abf7b1; color: #777700; padding-top: 15px;   padding-right: 15px;   padding-bottom: 15px;   padding-left: 15px;"}
+##### Plotting (N = ) graphs {style="background-color: #abf7b1; color: #777700; padding-top: 15px;   padding-right: 15px;   padding-bottom: 15px;   padding-left: 15px;"}
 
 ```{r}
 
@@ -451,7 +465,8 @@ This section was placed here after verifying there was indeed a batch effect to 
 
 ```{r}
 
-adj_counts <- ComBat_seq(as.matrix(counts), batch = meta$pH, group=NULL)
+counts_adj <- ComBat_seq(as.matrix(counts), batch = meta$pH, group=NULL)
+
 #adj_counts <- ComBat_seq(as.matrix(counts), batch = meta$pH, group=NULL, covar_mod = meta[,c("Age","Region")])
 #can I run ComBat_seq function multiple times to remove more than one batch effect?
 ```
@@ -461,36 +476,106 @@ adj_counts <- ComBat_seq(as.matrix(counts), batch = meta$pH, group=NULL)
 Should I correct the batch effect for all samples and them divide them OR divide them and then correct for batch effect? (still deciding the best method)
 
 ```{r}
-time_adjcts <- list() 
-for (i in levels(meta$GroupedAge)){   
-  subset <- adj_counts[,grepl(i, meta$GroupedAge)]   
-  time_adjcts <- append(time_adjcts, list(as.data.frame(subset))) 
-}  
-# No subset for ganglionic eminence because there is only one period with those samples; thus, no differential expression analysis can be performed. 
-space_adjcts <- list() 
-for (i in levels(meta$GroupedRegion)[!grepl("Ganglionic_eminence", levels(meta$GroupedRegion))]){   
-  subset <- adj_counts[,grepl(i, meta$GroupedRegion)]   
-  space_adjcts <- append(space_adjcts, list(as.data.frame(subset))) 
-}
+# Time subsets
+timesubs <- map(timesubs, ~list(
+  meta = .x$meta,
+  cts_raw = .x$cts_raw,
+  cts_adj = as.data.frame(counts_adj[,grepl(paste(rownames(.x$meta), collapse = "|"), colnames(counts_adj))])
+))
+
+# Space subsets
+spacesubs <- map(spacesubs, ~list(
+  meta = .x$meta,
+  cts_raw = .x$cts_raw,
+  cts_adj = as.data.frame(counts_adj[,grepl(paste(rownames(.x$meta), collapse = "|"), colnames(counts_adj))])
+))
 ```
 
 ##### Verifying if all batch adjusted subsets are correctly ordered {style="background-color: #abf7b1; color: #777700; padding-top: 15px;   padding-right: 15px;   padding-bottom: 15px;   padding-left: 15px;"}
 
 ```{r}
-for (i in 1:length(time_metasubs)){   
-  print(all(colnames(time_adjcts[[i]]) %in% rownames(time_metasubs[[i]]))) # same names   
-  print(all(colnames(time_adjcts[[i]]) == rownames(time_metasubs[[i]]))) # same order 
-}  
 
-for (i in 1:length(space_metasubs)){   
-  print(all(colnames(space_adjcts[[i]]) %in% rownames(space_metasubs[[i]]))) # same names   
-  print(all(colnames(space_adjcts[[i]]) == rownames(space_metasubs[[i]]))) # same order 
-}
+print(paste0("Time meta and adjusted counts subsets have the same (rownames and colnames) names? ", all(map_lgl(timesubs, ~ all(colnames(.x$cts_adj) %in% rownames(.x$meta))))))
+
+print(paste0("Time meta and adjsuted counts subsets have the same (rownames and colnames) order? ", all(map_lgl(timesubs, ~ all(colnames(.x$cts_adj) == rownames(.x$meta))))))
+
+print(paste0("space meta and adjsuted counts subsets have the same (rownames and colnames) names? ", all(map_lgl(spacesubs, ~ all(colnames(.x$cts_adj) %in% rownames(.x$meta))))))
+
+print(paste0("space meta and adjsuted counts subsets have the same (rownames and colnames) order? ", all(map_lgl(spacesubs, ~ all(colnames(.x$cts_adj) == rownames(.x$meta))))))
+```
+
+### Normalization of counts {style="background-color: #449944; color: #FFF685; padding-top: 15px;   padding-right: 15px;   padding-bottom: 15px;   padding-left: 15px"}
+
+##### Time - with batch effect {style="background-color: #abf7b1; color: #777700; padding-top: 15px;   padding-right: 15px;   padding-bottom: 15px;   padding-left: 15px;"}
+
+```{r}
+
+timesubs <- map(timesubs, function(i){
+  dds <- DESeqDataSetFromMatrix(countData = i$cts_raw, colData = i$meta, design=~1)
+  dds <- DESeq(dds)
+  vsd <- vst(dds, blind=FALSE)
+  mat <- as.data.frame(assay(vsd))
+  
+  i$norm_raw = mat
+  return(i)
+})
+
+```
+
+##### Time - without batch effect {style="background-color: #abf7b1; color: #777700; padding-top: 15px;   padding-right: 15px;   padding-bottom: 15px;   padding-left: 15px;"}
+
+```{r}
+
+timesubs <- map(timesubs, function(i){
+  dds <- DESeqDataSetFromMatrix(countData = i$cts_adj, colData = i$meta, design=~1)
+  dds <- DESeq(dds)
+  vsd <- vst(dds, blind=FALSE)
+  mat <- as.data.frame(assay(vsd))
+  
+  i$norm_adj = mat
+  return(i)
+})
+```
+
+##### Space - with batch effect {style="background-color: #abf7b1; color: #777700; padding-top: 15px;   padding-right: 15px;   padding-bottom: 15px;   padding-left: 15px;"}
+
+```{r}
+
+spacesubs <- map(spacesubs, function(i){
+  dds <- DESeqDataSetFromMatrix(countData = i$cts_raw, colData = i$meta, design=~1)
+  dds <- DESeq(dds)
+  vsd <- vst(dds, blind=FALSE)
+  mat <- as.data.frame(assay(vsd))
+  
+  i$norm_raw = mat
+  return(i)
+})
+```
+
+##### Space - without batch effect {style="background-color: #abf7b1; color: #777700; padding-top: 15px;   padding-right: 15px;   padding-bottom: 15px;   padding-left: 15px;"}
+
+```{r}
+
+spacesubs <- map(spacesubs, function(i){
+  dds <- DESeqDataSetFromMatrix(countData = i$cts_adj, colData = i$meta, design=~1)
+  dds <- DESeq(dds)
+  vsd <- vst(dds, blind=FALSE)
+  mat <- as.data.frame(assay(vsd))
+  
+  i$norm_adj = mat
+  return(i)
+})
 ```
 
 ### Dimensionality reduction {style="background-color: #449944; color: #FFF685; padding-top: 15px;   padding-right: 15px;   padding-bottom: 15px;   padding-left: 15px"}
 
-The idea is: the sample metadata will show all variables (such as region, age, pH, sex, ethnicity, etc.) that define or could define the gene expression profile of that sample. A good study design controls for all the variables that are not of interest for that study and only let the variables of interest control the expression profile. However, sometimes that is not done or its impossible to do, such as sex or ethnicity. Thus, by dimensionality reduction we can see if the variables (which are not of interest) have an impact in the expression profile of different samples in such way that they cluster together. This is a batch effect and it can be corrected statistically.
+The idea is: the sample metadata will show all variables (such as region, age, pH, sex, ethnicity, etc.) that define or could define the gene expression profile of that sample. A good study design controls for all the variables that are not of interest for that study and only let the variables of interest control the expression profile. However, sometimes that is not done or its impossible to do, such as sex or ethnicity. Thus, by dimensionality reduction we can see if the variables (which are not of interest) have an impact in the expression profile of different samples in such way that they cluster together. This is a batch effect and it can be corrected statistically with Combat-seq, for example.
+
+????????????????????????????????????????????????????????????????????????????????????????????????????
+
+O seurat pode analisar dados de bulk rna-seq? Do que eu tenho visto as formas de normalização dos counts é diferente (matematicamente) entre bulk e single cell: squared root, log2 vs RPKM, FPKM, TPM.
+
+?????????????????????????????????????????????????????????????????????????????????????????????????????
 
 ##### All samples - with batch effect {style="background-color: #abf7b1; color: #777700; padding-top: 15px;   padding-right: 15px;   padding-bottom: 15px;   padding-left: 15px;"}
 
@@ -1003,229 +1088,153 @@ for (i in 1:length(space_metasubs)){
 
 ### Batch vs Desired Variable {style="background-color: #449944; color: #FFF685; padding-top: 15px;   padding-right: 15px;   padding-bottom: 15px;   padding-left: 15px"}
 
-##### Time - with batch effect {style="background-color: #abf7b1; color: #777700; padding-top: 15px;   padding-right: 15px;   padding-bottom: 15px;   padding-left: 15px;"}
+##### Time - without batch effect {style="background-color: #abf7b1; color: #777700; padding-top: 15px;   padding-right: 15px;   padding-bottom: 15px;   padding-left: 15px;"}
 
 ```{r}
 
-# Just to verify the names and that there are no repetitions
-#View(time_adjcts[[1]][grepl("RELN|CACNA1H|RYR3", rownames(time_adjcts[[1]])),])
-
 testing_genes <- c("RELN", "CACNA1H", "RYR3")
 
-for (i in 1:length(time_metasubs)){
-  for (k in testing_genes){
-    cts <- time_adjcts[[i]][grepl(k, rownames(time_adjcts[[i]])),]
-    met <- time_metasubs[[i]][,c("GroupedRegion","pH")]
+for (i in 1:length(time_metasubs)) {
+  for (k in testing_genes) {
+    cts <- time_normbatchsubs[[i]][grepl(k, rownames(time_normbatchsubs[[i]])),]
+    met <- time_metasubs[[i]][,c("GroupedRegion", "pH")]
     met[,k] <- unlist(cts[1,])
     
     plot1 <- ggplot(met, aes(x = GroupedRegion, y = !!sym(k))) +
-      geom_boxplot()
+      geom_boxplot() +
+      ggtitle(paste0(time_metasubs[[i]]$GroupedAge[1], ", ", k, ", without batch effect"))  # título de tudo
     
     plot2 <- ggplot(met, aes(x = pH, y = !!sym(k))) +
-      geom_boxplot()
+      geom_boxplot() +
+      ggtitle(" ")
     
-    box_plot <- grid.arrange(plot1, plot2, nrow = 1)
+    final_plot <- plot_grid(plot1, plot2, nrow = 1)
     
-    direc <- paste0("images/expl_analysis/time_subsets/pre_batch/BatchVsDesVar/", intToUtf8(64+i), "_", time_metasubs[[i]]$GroupedAge[1])
-    if(!file.exists(direc)){dir.create(direc)}
+    direc <- paste0("images/expl_analysis/time_subsets/adj_batch/BatchVsDesVar/", intToUtf8(64+i), "_", time_metasubs[[i]]$GroupedAge[1])
+    if(!file.exists(direc)) { dir.create(direc) }
     
-    ggsave(filename = paste0(direc, "/", k, ".png"), plot = box_plot, width = 15, height = 4, dpi = 300)
-    
+    ggsave(filename = paste0(direc, "/", k, ".png"), plot = final_plot, width = 15, height = 6, dpi = 300)
   }
 }
 
 ```
 
-##### Space - with batch effect {style="background-color: #abf7b1; color: #777700; padding-top: 15px;   padding-right: 15px;   padding-bottom: 15px;   padding-left: 15px;"}
+##### Space - without batch effect {style="background-color: #abf7b1; color: #777700; padding-top: 15px;   padding-right: 15px;   padding-bottom: 15px;   padding-left: 15px;"}
 
 ```{r}
 
+testing_genes <- c("RELN", "CACNA1H", "RYR3")
+
+for (i in 1:length(space_metasubs)) {
+  for (k in testing_genes) {
+    cts <- space_normbatchsubs[[i]][grepl(k, rownames(space_normbatchsubs[[i]])),]
+    met <- space_metasubs[[i]][,c("GroupedAge", "pH")]
+    met[,k] <- unlist(cts[1,])
+    
+    plot1 <- ggplot(met, aes(x = GroupedAge, y = !!sym(k))) +
+      geom_boxplot() +
+      ggtitle(paste0(space_metasubs[[i]]$GroupedRegion[1], ", ", k, ", without batch effect"))  # título de tudo
+    
+    plot2 <- ggplot(met, aes(x = pH, y = !!sym(k))) +
+      geom_boxplot() +
+      ggtitle(" ")
+    
+    final_plot <- plot_grid(plot1, plot2, nrow = 1)
+    
+    direc <- paste0("images/expl_analysis/space_subsets/adj_batch/BatchVsDesVar/", space_metasubs[[i]]$GroupedRegion[1])
+    if(!file.exists(direc)) { dir.create(direc) }
+    
+    ggsave(filename = paste0(direc, "/", k, ".png"), plot = final_plot, width = 15, height = 6, dpi = 300)
+  }
+}
 ```
 
 # Differential expression analysis {style="background-color: #ffba01; color: #FFF685;  padding-top: 15px;   padding-right: 15px;   padding-bottom: 15px;   padding-left: 15px"}
 
 Deseq2 tutorial: <https://bioconductor.org/packages/release/bioc/vignettes/DESeq2/inst/doc/DESeq2.html>
 
-### Time - comparing all regions - Log2FoldChange and P-adj lists {style="background-color: #ffe800; color: #555500; padding-top: 15px;   padding-right: 15px;   padding-bottom: 15px;   padding-left: 15px"}
+Normalized counts change if I run deseq for: different subsets or all samples, different designs (\~1, \~group, \~batch+group)???? I think in theory it shouldnt, except for batch corrections, but I belive deseq corrects for batch only when performing DE, meaning it dosnt change the counts or normalized counts matrix based on the batch formula.
+
+### Time - comparing all regions - with batch {style="background-color: #ffe800; color: #555500; padding-top: 15px;   padding-right: 15px;   padding-bottom: 15px;   padding-left: 15px"}
 
 ```{r}
 
-time_logsubs <- list()
-time_padjsubs <- list()
-
-for (i in 1:length(time_metasubs)){
-  # Defining meta and counts dataframes
-  #cts <- time_normbatchsubs[[i]] #com o limma-voom
-  cts <- time_countsubs[[i]] #com o deseq2
-  met <- time_metasubs[[i]]
-  
-  # Getting the name of the GroupedAge subset
-  GA <- levels(met$GroupedAge)[1]
-  
-  # Defining log2FoldChange and p-adj empty dataframes
-  log_df <- data.frame(matrix(nrow = nrow(cts), ncol = nlevels(met$GroupedRegion)))
-  padj_df <- data.frame(matrix(nrow = nrow(cts), ncol = nlevels(met$GroupedRegion)))
-  
-  for(j in 1:nlevels(met$GroupedRegion)){
-    # Grouped region its comparing
-    reg <- levels(met$GroupedRegion)[j]
-    
+timesubs <- map(timesubs, function(i){
+  cts <- i$cts_raw
+  met <- i$meta
+  # Creating empty dfs
+  log <- data.frame(matrix(nrow = nrow(cts), ncol = nlevels(met$GroupedRegion)))
+  padj <- log
+  for (k in 1:nlevels(met$GroupedRegion)){
+    # Selecting region
+    reg <- levels(met$GroupedRegion)[k]
     # Adding column "Group" to metadata
     met$Group <- ifelse(met$GroupedRegion == reg, reg, "Control")
     met$Group <- factor(met$Group)
     met$Group <- relevel(met$Group, ref = "Control")
-    
-    # Running limma
-    #
-    #results <- as.data.frame(_______________)
-    
     # Running DESeq2
-    dds <- DESeqDataSetFromMatrix(countData = cts, colData = met, design = ~ pH + Group) # pegar daqui a matriz normalizada para usar no cemitool depois?
+    dds <- DESeqDataSetFromMatrix(countData = cts, colData = met, design = ~Group)
     dds <- DESeq(dds)
     res <- results(dds)
-    
-    # Filling up log_df and padj_df
-    log_df[,j] <- res$log2FoldChange
-    padj_df[,j] <- res$padj
+    # Filling up log and padj
+    log[,k] <- res$log2FoldChange
+    padj[,k] <- res$padj
   }
-  
   # Correcting rows names
-  rownames(log_df) <- rownames(res)
-  rownames(padj_df) <- rownames(res)
+  rownames(log) <- rownames(res)
+  rownames(padj) <- rownames(res)
   # Correcting columns names
-  colnames(log_df) <- levels(met$GroupedRegion)
-  colnames(padj_df) <- levels(met$GroupedRegion)
-  
-  # Adding dataframes to lists
-  time_logsubs <- append(time_logsubs, list(log_df))
-  time_padjsubs <- append(time_padjsubs, list(padj_df))
-}
+  colnames(log) <- levels(met$GroupedRegion)
+  colnames(padj) <- levels(met$GroupedRegion)
+  # Adding to local Timesubs element
+  # mudar a ordem das pastas?????????????????
+  i$DE$logfc$allregions_raw = log
+  i$DE$padj$allregions_raw = padj
+  return (i)
+})
+
 ```
 
-### Time - comparing only cortex - Log2FoldChange and P-adj lists {style="background-color: #ffe800; color: #555500; padding-top: 15px;   padding-right: 15px;   padding-bottom: 15px;   padding-left: 15px"}
+### Time - comparing all regions - without batch {style="background-color: #ffe800; color: #555500; padding-top: 15px;   padding-right: 15px;   padding-bottom: 15px;   padding-left: 15px"}
+
+```{r}
+
+
+```
+
+### Time - comparing only cortex - with batch {style="background-color: #ffe800; color: #555500; padding-top: 15px;   padding-right: 15px;   padding-bottom: 15px;   padding-left: 15px"}
 
 One heat map for each age subset, comparing only cortex regions between each other. So that the gene expression profile of non-cortex regions (such as the cerebellum) doesn't mask the effect and variation of cortex regions.
 
 ```{r}
-time_cortexlogsubs <- list()
-time_cortexpadjsubs <- list()
 
-for (i in 1:length(time_countsubs)){
-  # Defining meta and counts dataframes
-  #cts <- time_normbatchsubs[[i]] #com o limma-voom
-  cts <- time_countsubs[[i]] #com o deseq2
-  met <- time_metasubs[[i]]
-  
-  # Just cortex samples
-  cts <- cts[,grepl("lobe", met$GroupedRegion)]
-  met <- met[grepl("lobe", met$GroupedRegion),]
-  met$GroupedRegion <- factor(met$GroupedRegion)
-  #for(k in 1:ncol(met)){met[,k] <- factor(met[,k])} # carefull not to take the order offf
-  
-  # Getting the name of the GroupedAge subset
-  GA <- levels(met$GroupedAge)[1]
-  
-  # Defining log2FoldChange and p-adj empty dataframes
-  log_df <- data.frame(matrix(nrow = nrow(cts), ncol = nlevels(met$GroupedRegion)))
-  padj_df <- data.frame(matrix(nrow = nrow(cts), ncol = nlevels(met$GroupedRegion)))
-  
-  for(j in 1:nlevels(met$GroupedRegion)){
-    # Grouped region its comparing
-    reg <- levels(met$GroupedRegion)[j]
-    
-    # Adding column "Group" to metadata
-    met$Group <- ifelse(met$GroupedRegion == reg, reg, "Control")
-    met$Group <- factor(met$Group)
-    met$Group <- relevel(met$Group, ref = "Control")
-    
-    # Running limma
-    #
-    #results <- as.data.frame(_______________)
-    
-    # Running DESeq2
-    dds <- DESeqDataSetFromMatrix(countData = cts, colData = met, design = ~ pH + Group)
-    dds <- DESeq(dds)
-    res <- results(dds)
-    
-    # Filling up log_df and padj_df
-    log_df[,j] <- res$log2FoldChange
-    padj_df[,j] <- res$padj
-  }
-  
-  # Correcting rows names
-  rownames(log_df) <- rownames(res)
-  rownames(padj_df) <- rownames(res)
-  # Correcting columns names
-  colnames(log_df) <- levels(met$GroupedRegion)
-  colnames(padj_df) <- levels(met$GroupedRegion)
-  
-  # Adding dataframes to lists
-  time_cortexlogsubs <- append(time_cortexlogsubs, list(log_df))
-  time_cortexpadjsubs <- append(time_cortexpadjsubs, list(padj_df))
-}
 ```
 
-### Space - comparing all ages - Log2FoldChange and P-adj lists {style="background-color: #ffe800; color: #555500; padding-top: 15px;   padding-right: 15px;   padding-bottom: 15px;   padding-left: 15px"}
-
-One heat map for each space subset, comparing all ages between each other.
+### Time - comparing only cortex - without batch {style="background-color: #ffe800; color: #555500; padding-top: 15px;   padding-right: 15px;   padding-bottom: 15px;   padding-left: 15px"}
 
 ```{r}
 
-space_logsubs <- list()
-space_padjsubs <- list()
-
-for (i in 1:length(space_metasubs)){
-  # Defining meta and counts dataframes
-  #cts <- space_normbatchsubs[[i]] # for limma
-  cts <- space_countsubs[[i]]
-  met <- space_metasubs[[i]]
-  
-  # Getting the name of the GroupedAge subset
-  GR <- levels(met$GroupedRegion)[1]
-  
-  # Defining log2FoldChange and p-adj empty dataframes
-  log_df <- data.frame(matrix(nrow = nrow(cts), ncol = nlevels(met$GroupedAge)))
-  padj_df <- data.frame(matrix(nrow = nrow(cts), ncol = nlevels(met$GroupedAge)))
-  
-  for(j in 1:nlevels(met$GroupedAge)){
-    # Grouped age its comparing
-    age <- levels(met$GroupedAge)[j]
-    
-    # Adding column "Group" to metadata
-    met$Group <- ifelse(met$GroupedAge == age, age, "Control")
-    met$Group <- factor(met$Group)
-    met$Group <- relevel(met$Group, ref = "Control")
-    
-    # Running limma
-    #
-    #results <- as.data.frame(_______)
-    
-    # Running DESeq2
-    dds <- DESeqDataSetFromMatrix(countData = cts, colData = met, design = ~ Group)
-    dds <- DESeq(dds)
-    res <- results(dds)    
-    
-    # Filling up log_df and padj_df
-    log_df[,j] <- res$log2FoldChange
-    padj_df[,j] <- res$padj
-  }
-  
-  # Correcting rows names
-  rownames(log_df) <- rownames(res)
-  rownames(padj_df) <- rownames(res)
-  # Correcting columns names
-  colnames(log_df) <- levels(met$GroupedAge)
-  colnames(padj_df) <- levels(met$GroupedAge)
-  
-  # Adding dataframes to lists
-  space_logsubs <- append(space_logsubs, list(log_df))
-  space_padjsubs <- append(space_padjsubs, list(padj_df))
-}
 ```
 
-### Space - comparing only early stages - Log2FoldChange and P-adj lists {style="background-color: #ffe800; color: #555500; padding-top: 15px;   padding-right: 15px;   padding-bottom: 15px;   padding-left: 15px"}
+### Space - comparing all ages - with batch {style="background-color: #ffe800; color: #555500; padding-top: 15px;   padding-right: 15px;   padding-bottom: 15px;   padding-left: 15px"}
 
-One heat map for each space subset, comparing only early developmental ages between each other. So that the gene expression of older regions doesn't mask more subtle variability in early developmental stages.
+```{r}
+
+```
+
+### Space - comparing all ages - without batch {style="background-color: #ffe800; color: #555500; padding-top: 15px;   padding-right: 15px;   padding-bottom: 15px;   padding-left: 15px"}
+
+```{r}
+
+```
+
+### Space - comparing only early stages - with batch {style="background-color: #ffe800; color: #555500; padding-top: 15px;   padding-right: 15px;   padding-bottom: 15px;   padding-left: 15px"}
+
+```{r}
+
+```
+
+### Space - comparing only early stages - without batch {style="background-color: #ffe800; color: #555500; padding-top: 15px;   padding-right: 15px;   padding-bottom: 15px;   padding-left: 15px"}
 
 ```{r}
 
@@ -1413,6 +1422,7 @@ my_heatmaps(type = "space",
 
 
 #################### Mutações por paciente ############ (only frontal lobe) ######
+##### Arrumar um jeito de usar um escla de coloração só para que genes iguais não tenham colorações diferentes em pacientes diferentes (tipo: scale_one = TRUE)
 list_heat <- list()
 for (i in rownames(patients_mutations)){
   aux_ht <- space_logsubs[[1]][grepl(patients_mutations[i,"mutated_genes"],rownames(space_logsubs[[1]])),]
@@ -1448,45 +1458,9 @@ dev.off()
 
 ```
 
-# Gene co-expression network analysis {style="background-color: #990000; color: #FFF685;  padding-top: 15px;   padding-right: 15px;   padding-bottom: 15px;   padding-left: 15px"}
+# Gene co-expression network analysis Normalized - without batch effect {style="background-color: #990000; color: #FFF685;  padding-top: 15px;   padding-right: 15px;   padding-bottom: 15px;   padding-left: 15px"}
 
-### Time - Normalized counts matrix - adjusted for batch effect {style="background-color: #cc0000; color: #FFF685; padding-top: 15px;   padding-right: 15px;   padding-bottom: 15px;   padding-left: 15px"}
-
-Acredito que não seja uma boa ideia normalizar em 3 momentos diferentes (para a análise exploratória, para o deseq, e para o cemitool) com 2 ferramentas diferentes (seurat, deseq) a mesma matriz de contagens. PENSAR NUMA FORMA MELHOR!
-
-```{r}
-time_normbatchsubs <- list()  
-
-for (i in 1:length(time_adjcts)){
-  dds <- DESeqDataSetFromMatrix(countData = time_adjcts[[i]], colData = time_metasubs[[i]], design = ~1)
-  dds <- DESeq(dds)
-  vsd <- vst(dds, blind=FALSE)
-  mat <- as.data.frame(assay(vsd))
-  cts <- list(mat)
-
-  time_normbatchsubs <- append(time_normbatchsubs, cts)
-}
-```
-
-### Space - Normalized counts matrix - adjusted for batch effect {style="background-color: #cc0000; color: #FFF685; padding-top: 15px;   padding-right: 15px;   padding-bottom: 15px;   padding-left: 15px"}
-
-Acredito que não seja uma boa ideia normalizar em 3 momentos diferentes (para a análise exploratória, para o deseq, e para o cemitool) com 2 ferramentas diferentes (seurat, deseq) a mesma matriz de contagens. PENSAR NUMA FORMA MELHOR!
-
-```{r}
-space_normbatchsubs <- list()  
-
-for (i in 1:length(space_adjcts)){
-  dds <- DESeqDataSetFromMatrix(countData = space_adjcts[[i]], colData = space_metasubs[[i]], design = ~1)
-  dds <- DESeq(dds)
-  vsd <- vst(dds, blind=FALSE)
-  mat <- as.data.frame(assay(vsd))
-  cts <- list(mat)
-
-  space_normbatchsubs <- append(space_normbatchsubs, cts)
-}
-```
-
-### Time subsets {style="background-color: #cc0000; color: #FFF685; padding-top: 15px;   padding-right: 15px;   padding-bottom: 15px;   padding-left: 15px"}
+### Time - without batch {style="background-color: #cc0000; color: #FFF685; padding-top: 15px;   padding-right: 15px;   padding-bottom: 15px;   padding-left: 15px"}
 
 ```{r}
 
@@ -1538,7 +1512,7 @@ for (i in 1:length(time_normbatchsubs)){
 }
 ```
 
-### Time - Modules {style="background-color: #cc0000; color: #FFF685; padding-top: 15px;   padding-right: 15px;   padding-bottom: 15px;   padding-left: 15px"}
+### Time - Visualizing the Modules {style="background-color: #cc0000; color: #FFF685; padding-top: 15px;   padding-right: 15px;   padding-bottom: 15px;   padding-left: 15px"}
 
 ```{r}
 
@@ -1609,7 +1583,7 @@ for (i in 1:length(time_modules)){
 ### Pensar num jeito de visualizar quais são todos os genes de cada modulo e de que pathway eles são.
 ```
 
-### Space subsets {style="background-color: #cc0000; color: #FFF685; padding-top: 15px;   padding-right: 15px;   padding-bottom: 15px;   padding-left: 15px"}
+### Space - without batch {style="background-color: #cc0000; color: #FFF685; padding-top: 15px;   padding-right: 15px;   padding-bottom: 15px;   padding-left: 15px"}
 
 ```{r}
 
@@ -1662,7 +1636,7 @@ for (i in 1:length(space_normbatchsubs)){
 }
 ```
 
-### Space - Modules {style="background-color: #cc0000; color: #FFF685; padding-top: 15px;   padding-right: 15px;   padding-bottom: 15px;   padding-left: 15px"}
+### Space - Visualizing the Modules {style="background-color: #cc0000; color: #FFF685; padding-top: 15px;   padding-right: 15px;   padding-bottom: 15px;   padding-left: 15px"}
 
 ```{r}
 
